--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -14,7 +14,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintBottom_toTopOf="@+id/gamesButton"
         android:textSize="40sp"
-        android:text="Home" />
+        android:text="@string/home" />
 
     <Button
         android:id="@+id/gamesButton"
@@ -27,7 +27,7 @@
         android:paddingStart="8dp"
         android:paddingEnd="8dp"
         android:textSize="18sp"
-        android:text="Games"
+        android:text="@string/games"
         android:onClick="onGamesClicked"/>
 
     <Button
@@ -41,7 +41,7 @@
         android:paddingStart="8dp"
         android:paddingEnd="8dp"
         android:textSize="18sp"
-        android:text="Draw"
+        android:text="@string/draw"
         android:onClick="onDrawClicked"/>
 
     <Button
@@ -55,7 +55,7 @@
         android:paddingStart="8dp"
         android:paddingEnd="8dp"
         android:textSize="18sp"
-        android:text="Friends"
+        android:text="@string/friends"
         android:onClick="onFriendsClicked"/>
 
     <Button
@@ -69,7 +69,7 @@
         android:paddingStart="8dp"
         android:paddingEnd="8dp"
         android:textSize="18sp"
-        android:text="Sign Out"
+        android:text="@string/sign_out"
         android:onClick="onSignOutClicked"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
