Added max guesses

--- a/app/src/main/res/layout/activity_guess.xml
+++ b/app/src/main/res/layout/activity_guess.xml
@@ -43,8 +43,15 @@
                 android:onClick="onClearClicked"
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
-                android:layout_weight="1"
+                android:layout_weight=".5"
                 android:text="@string/clear" />
+            <Button
+                android:id="@+id/buttonSubmit"
+                android:onClick="onGuessClicked"
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_weight=".5"
+                android:text="@string/guess" />
 
             <TextView
                 android:id="@+id/Word"
