--- a/app/src/main/res/layout/activity_draw.xml
+++ b/app/src/main/res/layout/activity_draw.xml
@@ -19,8 +19,37 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintBottom_toTopOf="@id/seekBarColor"
+        app:layout_constraintBottom_toTopOf="@id/submitButton"
         android:background="#FFFFFF"/>
+
+    <TextView
+        android:id="@+id/wordTextView"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:gravity="center"
+        android:textColor="@color/Black"
+        android:layout_marginEnd="8dp"
+        android:layout_marginStart="8dp"
+        app:layout_constraintTop_toBottomOf="@+id/canvasPage"
+        app:layout_constraintBottom_toTopOf="@+id/seekBarColor"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toStartOf="@+id/submitButton"
+        app:layout_constraintWidth_percent="0.50"
+        tools:text="Word"/>
+
+    <Button
+        android:id="@+id/submitButton"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="8dp"
+        android:layout_marginStart="8dp"
+        android:onClick="onSubmitClicked"
+        android:background="@color/colorAccent"
+        app:layout_constraintTop_toBottomOf="@+id/canvasPage"
+        app:layout_constraintBottom_toTopOf="@+id/seekBarColor"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintWidth_percent="0.50"
+        android:text="Submit"/>
 
     <SeekBar
             android:id="@+id/seekBarColor"
