Game flow now completely works, including adding displaying pictures and making guesses

--- a/app/src/main/res/layout/activity_guess.xml
+++ b/app/src/main/res/layout/activity_guess.xml
@@ -24,6 +24,7 @@
             android:orientation="horizontal">
 
            <ImageView
+               android:id="@+id/drawingImageView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@drawable/fail"
