--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -30,8 +30,6 @@
         android:text="@string/games"
         android:onClick="onGamesClicked"/>
 
-
-
     <Button
         android:id="@+id/friendsButton"
         android:layout_width="wrap_content"
@@ -39,7 +37,7 @@
         app:layout_constraintTop_toBottomOf="@+id/gamesButton"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintBottom_toTopOf="@+id/signOutButton"
+        app:layout_constraintBottom_toTopOf="@+id/accountInfoButton"
         android:paddingStart="8dp"
         android:paddingEnd="8dp"
         android:textSize="18sp"
@@ -47,10 +45,24 @@
         android:onClick="onFriendsClicked"/>
 
     <Button
-        android:id="@+id/signOutButton"
+        android:id="@+id/accountInfoButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         app:layout_constraintTop_toBottomOf="@+id/friendsButton"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintBottom_toTopOf="@+id/signOutButton"
+        android:paddingStart="8dp"
+        android:paddingEnd="8dp"
+        android:textSize="18sp"
+        android:text="Account Info"
+        android:onClick="onAccountInfoClicked"/>
+
+    <Button
+        android:id="@+id/signOutButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toBottomOf="@+id/accountInfoButton"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
